fix spacings and shy breaks

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,7 +151,7 @@ a:active {
 #footer .copyright {
     background: #212121;
     color: #E5E5E5;
-    padding: 0.75rem 0;
+    padding: 1rem 0;
     font-size: 0.75rem;
 }
 
